--- a/deliveroo/package.json
+++ b/deliveroo/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^18.0.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.3",
     "@sanity/client": "^5.4.2",
     "@sanity/image-url": "^1.0.2",
     "expo": "~48.0.10",
@@ -19,11 +20,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-animatable": "^1.3.3",
     "react-native-heroicons": "^3.2.0",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "^13.4.0",
     "react-native-web": "~0.18.10",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
